@@ -39,18 +39,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - python-version: '3.7'
-            gdal-version: '3.4.3'
-          - python-version: '3.8'
+          - python-version: '3.9'
             gdal-version: '3.4.3'
           - python-version: '3.9'
             gdal-version: '3.5.3'
           - python-version: '3.10'
             gdal-version: '3.6.4'
           - python-version: '3.11'
-            gdal-version: '3.7.1'
+            gdal-version: '3.7.3'
           - python-version: '3.12'
-            gdal-version: '3.7.1'
+            gdal-version: '3.8.3'
 
     steps:
       - uses: actions/checkout@v4
@@ -94,9 +92,9 @@ jobs:
       matrix:
         include:
           - os: macos-latest
-            python-version: '3.10'
+            python-version: '3.11'
           - os: windows-latest
-            python-version: '3.10'
+            python-version: '3.11'
     steps:
       - uses: actions/checkout@v4
 
